[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description= "{{description}}"
license = "MIT or Apache-2.0"
author = ["{{authors}}"]
readme = "README.md"
repository = "https://github.com/{{github-username}}/{{project-name}}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
